--- a/src/css/default.css
+++ b/src/css/default.css
@@ -37,6 +37,7 @@ body {
     width: 100%;
     height: 2vh;
     background-color: rgba(0, 0, 0, 0.4);
+    border-radius: 5px;
 }
 
 #playlistRoot p {
