--- a/src/css/default.css
+++ b/src/css/default.css
@@ -7,7 +7,9 @@ html, body {
 }
 
 body {
-    background-color: #485869;
+    /*background-color: #485869;*/
+    background: url("../asset/background.jpg") no-repeat fixed;
+    background-size: cover;
 }
 
 * {
@@ -24,19 +26,25 @@ body {
 }
 
 #playlistRoot {
+    min-width: 15vw;
+    min-height: 41vh;
     width: 15vw;
     height: 41vh;
-    background-color: rgba(0, 0, 0, 0.4);
+    background-color: rgba(255, 255, 255, 0.1);
+    backdrop-filter: blur(5px);
     border-radius: 5px;
     left: 50px;
     top: 50px;
     position: absolute;
+    resize: both;
+    overflow: auto;
 }
 
 #dragBar {
     width: 100%;
     height: 2vh;
-    background-color: rgba(0, 0, 0, 0.4);
+    background-color: rgba(0, 0, 0, 0.2);
+    backdrop-filter: blur(5px);
     border-radius: 5px;
 }
 
@@ -48,9 +56,6 @@ body {
 #playlistEdit {
     width: 100%;
     height: 5vh;
-    display: flex;
-
-    flex-direction: row;
 }
 
 #youtubePlayer {
