--- a/src/css/playlistEdit.css
+++ b/src/css/playlistEdit.css
@@ -26,13 +26,18 @@
 }
 
 #youtubeListInputPopup {
+    position: absolute;
     width: 15vw;
+    height: 8vh;
     padding-bottom: 1%;
     border-radius: 5px;
     background-color: rgba(255, 255, 255, 0.1);
     backdrop-filter: blur(5px);
     text-align: center;
     display: none;
+
+    left: calc(50vw - 7.5vw);
+    top: calc(50vh - 8vh)
 }
 
 #youtubeListInputPopup p {
