--- a/src/css/controlMusic.css
+++ b/src/css/controlMusic.css
@@ -14,6 +14,11 @@
     outline: none;
     -webkit-appearance: none;
     border-radius: 1.5px;
+    transition-duration: 0.3s;
+}
+
+#progressBar:hover {
+    height: 9px;
 }
 
 ::-webkit-progress-bar {
@@ -67,4 +72,17 @@
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
+}
+
+#progressTime {
+    display: none;
+    position: absolute;
+    text-align: center;
+    background-color: rgba(255, 255, 255, 0.5);
+    backdrop-filter: blue(5px);
+    width: 3vw;
+    height: 2vh;
+    line-height: 2vh;
+    border-radius: 5px;
+    bottom: 32vh
 }
